# starmath

./: CMakeLists.txt
cmake/: FindCxxTest.cmake  FindStarMath.cmake
include/: CMakeLists.txt  StarMath.h
include/StarMath/: StarBox.h  StarMatrix.h  StarMatrix2.h  StarPlane.h  StarQuaternion.h  StarUtils.h  StarVec2.h  StarVec3.h  StarVec4.h
src/: CMakeLists.txt  StarMath.cpp
unitTest/: CMakeLists.txt
unitTest/directx/: CMakeLists.txt  MathTestSuite.h
unitTest/ogre/: CMakeLists.txt  MathTestPlane.h  MathTestQuaternion.h  MathTestStarValueTraits.h  MathTestSuite.h  RandGen.h  main.cpp
