install(FILES StarMath.h
        DESTINATION include)

install(FILES StarMath/StarMatrix.h 
              StarMath/StarMatrix2.h 
              StarMath/StarQuaternion.h
	      StarMath/StarUtils.h
	      StarMath/StarVec2.h
	      StarMath/StarVec3.h
	      StarMath/StarVec4.h
	      StarMath/StarPlane.h
              DESTINATION include/StarMath)
